# cfdb-ingest

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  cfdb-vars-plan.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
benchmarks/: baseline.csv  bench_convert.py  results.csv
cfdb_ingest/: __init__.py  base.py  cli.py  wrf.py
cfdb_ingest/tests/: conftest.py  create_test_data.py  test_cli.py  test_wrf.py  utest.py
conda/: meta.yaml
docs/: implementation_plan.md
docs/reference/: cfdb_ingest.md
