[project]
name = "cfdb-ingest"
authors = [
  { name = "mullenkamp", email = "mullenkamp1@gmail.com" }
]
description = "File format conversions to cfdb"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = [
  "cfdb>=0.3.1",
  "h5py",
  "numpy",
  "pyproj",
  "geointerp",
  "rechunkit",
  "typer",
]

[dependency-groups]
dev = [
  "spyder-kernels==2.5.2",
  "black",
  "mypy",
  "ruff",
  "pytest",
  "pytest-cov",
]

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.version]
# source = "regex_commit"
# commit_extra_args = ["-e"]
# path = "cfdb_ingest/__init__.py"

[tool.hatch.envs.default]
python = "3.11"
dependencies = [
    "spyder-kernels==2.5.2",
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    
]

[[tool.hatch.envs.all.matrix]]
python = ['3.10', '3.11', '3.12']

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/cfdb_ingest tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py311"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["cfdb_ingest"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"cfdb_ingest/tests/create_test_data.py" = ["T201"]

[tool.coverage.run]
source_pkgs = ["cfdb_ingest", "tests"]
branch = true
parallel = true
omit = [
  "src/cfdb_ingest/__about__.py",
]

[tool.coverage.paths]
cfdb_ingest = ["*/cfdb_ingest"]
tests = ["tests", "*/cfdb_ingest/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project.scripts]
cfdb-ingest = "cfdb_ingest.cli:app"

[project.urls]
Documentation = "https://mullenkamp.github.io/cfdb-ingest/"
Source = "https://github.com/mullenkamp/cfdb-ingest"

[tool.hatch.build.targets.sdist]
include = [
    "/cfdb-ingest",
]
exclude = [
    "/cfdb_ingest/tests/*",
]

[tool.hatch.version]
path = "cfdb_ingest/__init__.py"
